--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </section>
   <footer class="page-footer">
     <div class="container">
-      <small>Coded by <span>❤</span>FS-10 Team</a>
+      <small>Coded by <span>❤</span>BTK</a>
       </small>
     </div>
   </footer>
